[USS] Show mtime and other fields in sync-internals Node Browser

This CL copies over EntityMetadata fields into EntityData for USS types
in ClientTagBasedModelTypeProcessor::MergeDataWithMetadataForDebugging()
so that the right values appear in chrome://sync-internals.

Bug: 904376
Change-Id: Ifd8ef57d32677770ac61f2d3fceaed5f939ba048
Reviewed-on: https://chromium-review.googlesource.com/c/1341993
Commit-Queue: Jan Krcal <jkrcal@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609334}
Former-commit-id: 98256bd5638a078f46b835bac36bba05c8804c30